Small adjustments and make sure that there is equal spacing between each section

--- a/css/about.css
+++ b/css/about.css
@@ -40,3 +40,19 @@
     text-align: justify;
     line-height: 22px;
 }
+
+/* Tablet */
+@media (max-width: 991px) {
+    
+}
+  
+/* Mobile Landscape */
+@media (max-width: 767px) {
+    
+}
+  
+/* Mobile Portrait */
+@media (max-width: 479px) {
+    
+}
+
