--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,7 +1,7 @@
 .gallery {
-    padding: 50px 0px;
-    padding-bottom: 100px;
-    background-color: white;
+    padding: 70px 0px;
+    padding-bottom: 75px;
+    background-color: rgb(248, 248, 248);
 }
 
 .gallery-container {
@@ -24,6 +24,7 @@
 .img-gallery {
     width: 85%;
     margin: 20px auto;
+    margin-bottom: 0;
     display: grid;
     grid-template-columns: repeat(5, 1fr); /* 4 equal columns */
     grid-template-rows: repeat(2, 1fr); /* 2 equal rows */
@@ -67,4 +68,19 @@
     font-size: 30px;
     color: white;
     cursor: pointer;
+}
+
+/* Tablet */
+@media (max-width: 991px) {
+    
+}
+  
+/* Mobile Landscape */
+@media (max-width: 767px) {
+    
+}
+  
+/* Mobile Portrait */
+@media (max-width: 479px) {
+    
 }
