--- a/css/location.css
+++ b/css/location.css
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    background-color: white;
-    padding: 100px 0;
+    background-color: rgb(248, 248, 248);
+    padding: 70px 0;
+    padding-bottom: 75px;
 }
 
 .location-text {
@@ -87,4 +88,20 @@
     border: 0;
     border-radius: 30px;
 }
+
+/* Tablet */
+@media (max-width: 991px) {
+    
+}
+  
+/* Mobile Landscape */
+@media (max-width: 767px) {
+    
+}
+  
+/* Mobile Portrait */
+@media (max-width: 479px) {
+    
+}
+
 
