--- a/css/reviews.css
+++ b/css/reviews.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     margin: 0;
-    padding: 100px 0;
+    padding: 70px 0;
+    padding-bottom: 75px;
     box-sizing: border-box;
     background-color: white;
 }
@@ -19,6 +20,7 @@
     text-align: center;
     margin: 0 auto;
     padding: 30px 15px;
+    padding-top: 0;
     display: flex;
     flex-direction: column;
 }
@@ -42,7 +44,7 @@
 .reviews-item .info {
     display: flex;
     align-items: center;
-    box-shadow: 0 13px 18px rgba(68, 77, 136, 0.2);
+    box-shadow: 0 2px 3px rgba(68, 77, 136, 0.2);
     padding: 90px 40px;
     padding-top: 125px;
     flex-direction: column;
@@ -103,4 +105,19 @@
 .swiper-slide-next .reviews-item {
     transform: scale(1.1);
     opacity: 1;
+}
+
+/* Tablet */
+@media (max-width: 991px) {
+    
+}
+  
+/* Mobile Landscape */
+@media (max-width: 767px) {
+    
+}
+  
+/* Mobile Portrait */
+@media (max-width: 479px) {
+    
 }
