--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html {
     max-width: 1920px;
     margin: 0 auto;
     overflow-x: hidden;
-    border: 1px solid rgb(124, 124, 124);
+    border: 1px solid black;
 }
 
 body {
